# traffic_identify_av

./: .gitignore  CMakeLists.txt  KafkaProducer.h  README.md  cJSON.c  pcap_path  traffic_identify_av.cpp  traffic_identify_av.h
1.1/: .gitignore  get_burst_fea.py  traffic_identify_av.cpp  traffic_identify_av.h
cmake/: Package.cmake  Version.cmake
relase/: .gitignore  KafkaProducer.cpp  Makefile  README.md  cJSON.h  traffic_identify_av.cpp  traffic_identify_av.h
src/: README.md  traffic_identify_av.cpp  traffic_identify_av.h
